# hwt

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs  indices.rs  insert.rs  neighbors.rs
examples/: benches.rs
examples/insert/: mod.rs
examples/neighbors/: mod.rs
src/: chf.rs  feature_heap.rs  hamming_queue.rs  hwt.rs  indices.rs  lib.rs  search.rs
src/search/: exact.rs  radius.rs
tests/: neighbors.rs  search.rs
