[package]
name = "hwt"
description = "Hamming Weight Tree for finding neighbors in Hamming space"
version = "0.3.2"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["knn", "nearest", "neighbors", "binary", "hamming"]
documentation = "https://docs.rs/hwt/"
repository = "https://github.com/vadixidav/hwt"
readme = "README.md"

[dependencies]
itertools = "0.8.0"
either = "1.5.1"
hashbrown = "0.2.1"
ahash = "0.1.18"
swar = "0.4.0"
log = {version = "0.4.6", features = ["max_level_trace", "release_max_level_warn"]}

[dev-dependencies]
criterion = "0.2.10"
rand = "0.6.5"
# Enable trace when testing unless benchmarking, then only include warn.
log = {version = "0.4.6", features = ["max_level_trace", "release_max_level_warn"]}
simple-logging = "2.0.2"
chrono = "0.4.6"

[[bench]]
name = "benches"
path = "examples/benches.rs"
harness = false

[profile.release]
debug = true
